# home-ops

./: .ansible-lint  .gitignore  404.html  CNAME  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  nextdns-config.yml  pyproject.toml
ansible/: README.md  ansible-navigator.yml  ansible.cfg  inventory.yml  op-ansible-vault.sh  pyproject.toml  requirements.txt  requirements.yml
ansible/awx/: index.html
ansible/ee/: bindep.txt  build_requirements.py  custom_entrypoint.sh  execution-environment.yml  op_export.sh  requirements.txt  requirements.yml
ansible/execution-environment/: index.html
ansible/files/: proxmox_tailscale_cert.sh
ansible/group_vars/: all.yml  control.yml  docker.yml  workers.yml
ansible/inventory/: inventory.yml
ansible/inventory/group_vars/: all.yml  control.yml  docker.yml  exit_node.yml  minecraft.yml  proxmox.yml  subnet_router.yml  tailscale.yml  workers.yml
ansible/inventory/host_vars/: apps01.net.dbren.uk.yml  backup01.net.dbren.uk.yml  (+6 more)
ansible/kubernetes/: inventory.yml
ansible/minecraft/: README.md  index.html  inventory.yml  playbook.yml  requirements.yml
ansible/nuc/: README.md  inventory.yml
ansible/pihole/: index.html
ansible/playbooks/: awx-deploy-playbook.yml  docker-host-playbook.yml  k3s-deploy-playbook.yml  k3s-playbook.yml  lxc-journald-playbook.yml  lxc-playbook.yml  media-playbook.yml  minecraft-playbook.yml  patch-playbook.yml  pihole-playbook.yml  pihole-records.yml  playbook-awx-deploy.yml  playbook-awx.yml  playbook-beszel-agent.yml  playbook-docker-prune.yml  playbook-k3s-deploy.yml  playbook-k3s.yml  playbook-media-server.yml  playbook-pihole-records.yml  playbook-proxmox-backup-cifs.yml  playbook-proxmox-external-vote.yml  playbook-setup.yml  playbook-tailscale.yml  proxmox-backup-cifs.yml  proxmox-create-vm-template.yml  proxmox-download-iso-playbook.yml  proxmox-external-vote.yml  proxmox-storage-playbook.yml  setup-playbook.yml  tailscale-playbook.yml
ansible/proxmox/: README.md  create-vm-template.yml  download-iso-playbook.yml  index.html  inventory.yml
ansible/raspberrypi3/: README.md  inventory.yml  playbook.yml
ansible/tailscale/: index.html
ansible/templates/: kube-vip-daemonset.yml.j2  lxcjail.local.j2  ssh-discord-notify.sh.j2
ansible/vars/: discord_webhook.yml  docker_host.yml  general.yml  k3s-deploy.yml  k3s.yml  media-server.yml  media.yml  minecraft.yml  modded_minecraft.yml  paper_minecraft.yml  pihole-records.yml  pihole.yml  pihole_records.yml  proxmox-backup-cifs.yml  proxmox_backup.yml  setup.yml
(+174 files in other folders)
