[project]
name = "Home-Ops"
version = "0.1.0"
description = "Home-Ops"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ansible-core==2.20.4"
]
lint = [
    { include-group = "dev" },
    "ansible-lint==26.3.0"
]
build = [
    { include-group = "dev" },
    "ansible-builder==3.1.1"
]
docs = [
    "mkdocs-material==9.7.6",
]
