[project]
name = "Home-Ops"
version = "0.1.0"
description = "Mono repository for managing my Homelab infrastructure 🏠 🛠"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ansible-core==2.20.4"
]

[dependency-groups]
lint = [
    "ansible-lint==26.4.0"
]
build = [
    "ansible-builder==3.1.1"
]
docs = [
    "mkdocs-material==9.7.6",
]
