[project]
name = "ansible"
version = "0.1.0"
description = "Home-Ops Ansible Content."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jmespath==1.0.1",
    "passlib==1.7.4",
    "charset-normalizer==3.4.4",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "certifi==2025.10.5",
    "idna==3.11",
]

[dependency-groups]
dev = [
    "ansible-core==2.20.0",
    "ansible-lint==25.11.0",
    "go-task-bin==3.45.5",
]
docs = [
    "mkdocs-material>=9.6.21",
]
