[project]
name = "ansible"
version = "0.1.0"
description = "Home-Ops Ansible Content."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jmespath==1.0.1",
    "passlib==1.7.4",
    "charset-normalizer==3.4.4",
    "requests==2.32.5",
    "urllib3==2.6.2",
    "certifi==2025.11.12",
    "idna==3.11",
    "cffi==2.0.0",
    "pycparser==2.23 ; implementation_name != 'PyPy'",
]

[dependency-groups]
dev = [
    "ansible-core==2.20.1",
    "ansible-lint==25.12.2"
]
docs = [
    "mkdocs-material>=9.6.21",
]
