[project]
name = "ansible"
version = "0.1.0"
description = "Home-Ops Ansible Content."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jmespath==1.1.0",
    "passlib==1.7.4",
    "charset-normalizer==3.4.4",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "certifi==2026.1.4",
    "idna==3.11",
    "cffi==2.0.0",
    "pycparser==3.0 ; implementation_name != 'PyPy'",
    "filelock>=3.24.3",
    "cryptography>=46.0.5"
]

[dependency-groups]
dev = [
    "ansible-core==2.20.2",
    "ansible-lint==26.2.0"
]
docs = [
    "mkdocs-material>=9.6.21",
]
